Fix T68763: Smooth Brush not working in LookDev or Rendered Mode

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D5585